Added registration code
